# ConcreteDropout

./: LICENSE  README.md  pyproject.toml
examples/: mnist_convnet_concrete_dropout.ipynb  regression_MCDropout.ipynb
examples/PyTorch/: MNIST_pytorch.ipynb
examples/Tensorflow/: mnist_convnet_concrete_dropout.ipynb  regression_MCDropout.ipynb
src/ConcreteDropout/: __init__.py  pytorch.py  tensorflow.py
