[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ConcreteDropout"
version = "0.1.0"
authors = [
  { name="Aurelio Amerio", email="aurelio.amerio@ific.uv.es" },
]
description = "Concrete Dropout implementation for Tensorflow 2"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
install_requires= ['tensorflow >= 2.0']

[project.urls]
"Homepage" = "https://github.com/aurelio-amerio/ConcreteDropout-TF2"
"Bug Tracker" = "https://github.com/aurelio-amerio/ConcreteDropout-TF2/issues"