[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ConcreteDropout"
version = "0.2.0"
authors = [
  { name="Aurelio Amerio", email="aurelio.amerio@ific.uv.es" },
]
description = "Concrete Dropout implementation for Tensorflow 2 and PyTorch"
dependencies = []
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/aurelio-amerio/ConcreteDropout-TF2"
"Bug Tracker" = "https://github.com/aurelio-amerio/ConcreteDropout-TF2/issues"